facet-typescript/src/snapshots/facet_typescript__tests__test_default_in_enum_variant.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1524
expression: ts
---
export type Message =
  | { Text: { content: string } }
  | { Data: { required: string; optional?: number } };
