facet-typescript/src/snapshots/facet_typescript__tests__test_default_in_flattened_struct.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1505
expression: ts
---
export interface WithFlatten {
  outer_field: string;
  foo: string;
  bar?: number;
}
