facet-typescript/src/snapshots/facet_typescript__tests__test_default_not_required.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1432
expression: ts
---
export interface Wrapper {
  a: string;
  d?: Def;
}

export interface Def {
  a: number;
  b: number;
}
