facet-typescript/src/snapshots/facet_typescript__tests__test_empty_struct.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1319
expression: e
---
export type Empty = object;
