facet-typescript/src/snapshots/facet_typescript__tests__test_empty_struct_multiple_references.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1398
expression: ts
---
export interface Container {
  first: Empty;
  second: Empty;
  third?: Empty;
}

export type Empty = object;
