facet-typescript/src/snapshots/facet_typescript__tests__test_empty_struct_with_skipped_fields.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1382
expression: ts
---
export type EmptyAfterSkip = object;
