facet-typescript/src/snapshots/facet_typescript__tests__test_empty_struct_wrap.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1319
expression: d
---
export interface Data {
  empty: Empty;
}

export type Empty = object;
