facet-typescript/src/snapshots/facet_typescript__tests__test_flatten_empty_struct.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1413
expression: ts
---
export type Wrapper = object;
