facet-typescript/src/snapshots/facet_typescript__tests__test_untagged_enum_unit_and_newtype_variants.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1509
expression: ts
---
export type Enum = "Daily" | "Weekly" | number;
