facet-typescript/src/snapshots/facet_typescript__tests__test_untagged_enum_with_tuple_variant.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1524
expression: ts
---
export type Message = string | [string, number] | { x: number; y: number };
