facet-typescript/src/snapshots/facet_typescript__tests__transparent_newtype.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export type TransparentId = number;

export type u64 = number;
